--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "matching-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mattlgroff.github.io/match-game/",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
