Lots of changes

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://mattlgroff.github.io/match-game/",
   "dependencies": {
+    "classnames": "^2.2.5",
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
